[project]
name = "raw_cal"
version = "0.5.1"
description = "TART Radio Telescope Calibration"
authors = [
    {name = "Tim Molteno",email = "tim@molteno.net"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyfftw (>=0.15.0,<0.16.0)",
    "tart (>=1.4.0,<2.0.0)",
    "tart-tools (>=1.4.0,<2.0.0)",
    "torch"
]

[tool.poetry]
packages = [{include = "raw_cal"}]

[tool.poetry.scripts]
raw_calibrate = "raw_cal.tart_cal:main"
archive_calibrate = "raw_cal.tart_cal:main"
pos_from_gps = "raw_cal.pos_from_gps:main"
get_cal_data = "raw_cal.get_cal_data:main"


[tool.poetry.dependencies]
torch = [
  {markers = "sys_platform == 'darwin'", source = "PyPI"},
  {markers = "sys_platform != 'darwin'", source = "torch-cpu"}
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"
